支持的系统新加almalinux；表格转置

--- a/docs/getting-started/_parts/_quickstart-ocboot-env.mdx
+++ b/docs/getting-started/_parts/_quickstart-ocboot-env.mdx
@@ -2,14 +2,19 @@
 
 根据 CPU 架构不同，支持的发行版也不一样，目前支持的发行版情况如下：
 
-|              | CentOS 7 2009<br/>x86_64\+aarch64 | OpenEuler 22.03 LTS Sp3<br/>x86_64\+aarch64 | Debian 10<br/>x86_64\+aarch64 | Debian 11<br/>x86_64\+aarch64 | Ubuntu 22.04<br/>x86_64\+aarch64 | CentOS  Stream8<br/>x86_64 | Rocky Linux 8.9<br/>x86_64 | OpencloudOS 8.8<br/>x86_64 |
-| ------------ | ----------------------------- | ------------------------------------------- | ----------------------------- | ----------------------------- | -------------------------------- | -------------------------- | -------------------------- | -------------------------- |
-| Release/3.11 | ISO+OCBOOT                    | ISO+OCBOOT                                  | OCBOOT                        | OCBOOT                        | OCBOOT                           | OCBOOT                     | OCBOOT                     | OCBOOT                     |
-| Release/3.10 | ISO+OCBOOT                    |                                             | OCBOOT                        | OCBOOT                        | OCBOOT                           | OCBOOT                     | OCBOOT                     | OCBOOT                     |
-| Release/3.9  | ISO+OCBOOT                    |                                             |                               |                               |                                  |                            |                            |                            |
-| Release/3.8  | ISO+OCBOOT                    |                                             |                               |                               |                                  |                            |                            |                            |
-| Release/3.7  | ISO+OCBOOT                    |                                             |                               |                               |                                  |                            |                            |                            |
-| Release/3.6  | ISO+OCBOOT                    |                                             |                               |                               |                                  |                            |                            |                            |
+注：3.11、3.10等，表示发行版 Release/3.11、Release/3.10。其余同理。
+
+|                                        | 3.11 | 3.10 | 3.9 | 3.8 | 3.7 | 3.6 |
+| -------------------------------------- | ---- | ---- | --- | --- | --- | --- |
+| CentOS 7 2009 x86_64+aarch64           | ✅    | ✅    | ✅   | ✅   | ✅   | ✅   |
+| OpenEuler 22.03 LTS Sp3 x86_64+aarch64 | ✅    | ✅    |     |     |     |     |
+| Debian 10 x86_64+aarch64               | ✅    | ✅    |     |     |     |     |
+| Debian 11 x86_64+aarch64               | ✅    | ✅    |     |     |     |     |
+| Ubuntu 22.04 x86_64+aarch64            | ✅    | ✅    |     |     |     |     |
+| CentOS  Stream8 x86_64                 | ✅    | ✅    |     |     |     |     |
+| Rocky Linux 8.9 x86_64                 | ✅    | ✅    |     |     |     |     |
+| OpencloudOS 8.8 x86_64                 | ✅    | ✅    |     |     |     |     |
+| AlmaLinux 8.9 x86_64                   | ✅    | ✅    |     |     |     |     |
 
 注意事项：
 
