--- a/docs/getting-started/_parts/_quickstart-ocboot-env.mdx
+++ b/docs/getting-started/_parts/_quickstart-ocboot-env.mdx
@@ -1,9 +1,23 @@
-- 操作系统: 根据 CPU 架构不同，支持的发行版也不一样，目前支持的发行版情况如下：
-    - [CentOS 7.6~7.9 Minimal](http://isoredirect.centos.org/centos/7/isos): 支持 x86_64 和 arm64
-    - [Debian 10/11](https://www.debian.org/distrib/): 支持 x86_64 和 arm64
-    - [Ubuntu 22.04](https://releases.ubuntu.com/jammy/): 仅支持 x86_64
-    - [银河麒麟V10 SP2](https://www.kylinos.cn/scheme/server/1.html): 支持 x86_64 和 arm64
-    - [统信 UOS kongzi](https://www.chinauos.com/): 支持 x86_64 和 arm64
+### 操作系统:
+
+根据 CPU 架构不同，支持的发行版也不一样，目前支持的发行版情况如下：
+
+注：3.11、3.10等，表示发行版 Release/3.11、Release/3.10。其余同理。
+
+|                                        | 3.11 | 3.10 | 3.9 | 3.8 | 3.7 | 3.6 |
+| -------------------------------------- | ---- | ---- | --- | --- | --- | --- |
+| CentOS 7 2009 x86_64+aarch64           | ✅    | ✅    | ✅   | ✅   | ✅   | ✅   |
+| OpenEuler 22.03 LTS Sp3 x86_64+aarch64 | ✅    | ✅    |     |     |     |     |
+| Debian 10 x86_64+aarch64               | ✅    | ✅    |     |     |     |     |
+| Debian 11 x86_64+aarch64               | ✅    | ✅    |     |     |     |     |
+| Ubuntu 22.04 x86_64+aarch64            | ✅    | ✅    |     |     |     |     |
+| CentOS  Stream8 x86_64                 | ✅    | ✅    |     |     |     |     |
+| Rocky Linux 8.9 x86_64                 | ✅    | ✅    |     |     |     |     |
+| OpencloudOS 8.8 x86_64                 | ✅    | ✅    |     |     |     |     |
+| AlmaLinux 8.9 x86_64                   | ✅    | ✅    |     |     |     |     |
+
+注意事项：
+
 - 操作系统需要是干净的版本，因为部署工具会重头搭建指定版本的 kubernetes 集群，所以确保系统没有安装 kubernetes, docker 等容器管理工具，否则会出现冲突导致安装异常
 - 最低配置要求: CPU 4核, 内存 8GiB, 存储 100GiB
 - 虚拟机和服务使用的存储路径都在 **/opt** 目录下，所以理想环境下建议单独给 **/opt** 目录设置挂载点
