--- a/docs/getting-started/_parts/_quickstart-ocboot-env.mdx
+++ b/docs/getting-started/_parts/_quickstart-ocboot-env.mdx
@@ -6,15 +6,16 @@
 
 |                                        | 3.11 | 3.10 | 3.9 | 3.8 | 3.7 | 3.6 |
 | -------------------------------------- | ---- | ---- | --- | --- | --- | --- |
-| CentOS 7 2009 x86_64+aarch64           | ✅    | ✅    | ✅   | ✅   | ✅   | ✅   |
-| OpenEuler 22.03 LTS Sp3 x86_64+aarch64 | ✅    | ✅    |     |     |     |     |
-| Debian 10 x86_64+aarch64               | ✅    | ✅    |     |     |     |     |
-| Debian 11 x86_64+aarch64               | ✅    | ✅    |     |     |     |     |
-| Ubuntu 22.04 x86_64+aarch64            | ✅    | ✅    |     |     |     |     |
-| CentOS  Stream8 x86_64                 | ✅    | ✅    |     |     |     |     |
-| Rocky Linux 8.9 x86_64                 | ✅    | ✅    |     |     |     |     |
-| OpencloudOS 8.8 x86_64                 | ✅    | ✅    |     |     |     |     |
-| AlmaLinux 8.9 x86_64                   | ✅    | ✅    |     |     |     |     |
+| CentOS 7 2009 x86_64+aarch64           | ✅   |  ✅  | ✅  | ✅  | ✅  | ✅  |
+| OpenEuler 22.03 LTS Sp3 x86_64+aarch64 | ✅   |  ✅  |     |     |     |     |
+| Debian 10 x86_64+aarch64               | ✅   |  ✅  |     |     |     |     |
+| Debian 11 x86_64+aarch64               | ✅   |  ✅  |     |     |     |     |
+| Ubuntu 22.04 x86_64+aarch64            | ✅   |  ✅  |     |     |     |     |
+| CentOS  Stream8 x86_64                 | ✅   |  ✅  |     |     |     |     |
+| Rocky Linux 8.9 x86_64                 | ✅   |  ✅  |     |     |     |     |
+| OpencloudOS 8.8 x86_64                 | ✅   |  ✅  |     |     |     |     |
+| AlmaLinux 8.9 x86_64                   | ✅   |  ✅  |     |     |     |     |
+| AnolisOS 8.8 x86_64                    | ✅   |  ✅  |     |     |     |     |
 
 注意事项：
 
