--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,10 +4,6 @@ sidebar_position: -311
 
 # v3.11.x
 
-:::danger
-- 从3.11开始, 华为云将支持组织账号功能，升级完成后，云账号底下的资源会完整清理一次，再重新同步组织账号资源，因此华为云账号底下的虚拟机密码信息会丢失, 且所有资源的id信息将发生变化
-:::
-
 ## v3.11.0
 
 版本 3.11 自 2023 年 4 月开始开发，历时大概 10 个月，共计 4000 多个PR。
@@ -116,3 +112,10 @@ Cloudpods v3.11 适配了更多的操作系统，除了前序版本已支持的 
 具体变更请参考: 
 
 - [CHANGELOG v3.11.0](../development/changelog/release-3_11/3-11-0)
+
+
+::::warning
+- 从3.11开始, 华为云即将支持组织账号功能，升级完成后，华为云云账号底下的资源会完整清理一次，再重新同步账号资源，因此华为云账号底下的虚拟机密码信息会丢失, 且华为云所有资源的id信息将发生变化
+:::
+
+
