修正错别字
line 12:
在Kubernetes的Pod [种] --> 中

--- a/docs/operations/k8s/index.mdx
+++ b/docs/operations/k8s/index.mdx
@@ -8,7 +8,7 @@ sidebar_position: 6
 
 使用 ocboot 部署的 Cloudpods 服务运行在Kubernetes上，本章介绍Kubernetes集群的运维相关知识和技巧。
 
-每个服务二进制都运行在Kubernetes的Pod种，如何诊断Pod内服务组件的问题，请参考 [排查pod异常](./poderror)。
+每个服务二进制都运行在Kubernetes的Pod中，如何诊断Pod内服务组件的问题，请参考 [排查pod异常](./poderror)。
 
 Pod与Pod之间的容器网络采用的是Calico网络插件，如何排查Pod网络问题，请参考 [排查Pod网络问题](./dnserror)。
 
