--- a/docs/development/changelog/release-3_10/3-10-0.md
+++ b/docs/development/changelog/release-3_10/3-10-0.md
@@ -4930,6 +4930,8 @@ sidebar_position: -3100
 
 ng@yunionyun.com))
 
+ng@yunionyun.com))
+
 houyousong@yunionyun.com))
 
 it/d79872680b37dcf5a51333fddf7f80364ff12472), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
