--- a/i18n/en/docusaurus-plugin-content-docs/current/development/changelog/release-3_10/3-10-0.md
+++ b/i18n/en/docusaurus-plugin-content-docs/current/development/changelog/release-3_10/3-10-0.md
@@ -4930,6 +4930,8 @@ Repo: https://github.com/yunionio/sdnagent
 
 ng@yunionyun.com))
 
+ng@yunionyun.com))
+
 houyousong@yunionyun.com))
 
 it/d79872680b37dcf5a51333fddf7f80364ff12472), [Yousong Zhou](mailto:zhouyousong@yunionyun.com))
