--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,38 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.2 (含v3.11.1)
+
+date: 2024-3-20
+
+### 功能优化
+
+- 【报表】支持忽略费用为0的项目清单（企业版）
+- 【网络】支持同步负载均衡安全组信息
+- 【网络】支持同步华为云公网NAT网关
+- 【多云】支持对接Azure国际存储桶账单
+- 【主机】支持通过webconsole文件上传和下载
+- 【主机】支持VMware主机备注信息双向同步
+
+### 问题修复
+
+- 【系统】修复telegraf容器的host目录挂载方式错误导致宿主机mount泄露问题
+- 【主机】修复基于主机镜像创建主机调整配置报错问题
+- 【主机】修复虚拟机启动找不到网桥问题
+- 【系统】修复偶发修改备注无反应问题
+- 【主机】修复展示GPU出现重复问题
+
+### 新功能
+
+- 【费用】支持云账号封账功能（企业版）
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.1](../development/changelog/release-3_11/3-11-1)
+- [CHANGELOG v3.11.2](../development/changelog/release-3_11/3-11-2)
+
 ## v3.11.0
 
 版本 3.11 自 2023 年 4 月开始开发，历时大概 10 个月，共计 4000 多个PR。
