--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,58 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.3
+
+date: 2024-4-28
+
+### 功能优化
+
+- 【主机】支持删除阿里云华为云等公有云的包年包月主机
+- 【主机】支持 VMware 平台镜像通过可用区过滤
+- 【主机】优化本地盘快照删除逻辑，API 删除快照时同步删除宿主机上的快照
+- 【主机】自定义设备类型去除自动探测逻辑，需要指定探测 host
+- 【主机】探测 GPU 设备只对 DISPLAY class code 过滤厂商为 NVIDIA/AMD
+- 【主机】支持主机重置数据盘，支持本地磁盘的冷迁移
+- 【多云】优化云账号同步速度，支持并发同步
+- 【多云】金山云主机，网络，标签等资源同步支持
+- 【多云】cloudid 重构，云上和云下的用户信息从多对一改为一对一模型
+- 【多云】自动清理无效的镜像缓存信息，优化纳管云上镜像加载速度
+- 【认证】按需实时更新各个服务的项目信息同步
+- 【控制台】允许通过 UI 策略隐藏大屏，cloudshell 等功能入口
+
+### 问题修复
+
+- 【系统】修复堡垒机未展示归属项目问题（企业版）
+- 【主机】修复基于购物车创建资源展示信息错误问题（企业版）
+- 【主机】修复使用轻量虚拟机部署 ARM 虚机失败的问题
+- 【主机】修复 Debian/Ubuntu 等操作系统在线安装监控 agent 失败的问题
+- 【主机】修正 Ubuntu/Debian 等使用 netplan 设置 bond 网卡网络配置失效问题
+- 【主机】修正 userdata 脚本因为默认 umask 设置不自动执行问题
+- 【负载均衡】修正添加负载均衡监听器的 http 规则时报无法找到 domain 的报错
+- 【网络】修复搜索 IPv6 子网搜索失败问题
+- 【网络】修复 vpcagent 执行 ovn 同步命令超时 signal killed 问题
+- 【多云】修复创建公有云子账户通知无法选取邮箱问题
+- 【认证】修复权限信息展示不全问题
+- 【多云】修复 Cloudpods 同步 region 丢失问题
+- 【多云】修复腾讯云 API 接口变动导致同步异常问题
+
+### 新功能
+
+- 【计费】费用模块支持金山云账单（企业版）
+- 【计费】支持账单”封账“操作，设置封账的月份的账单无法更新（企业版）
+- 【费用】支持对接 Azure（国际和国内）的对象存储桶账单（企业版）
+- 【费用】支持自定义外部数据计费（企业版）
+- 【主机】支持磁盘重置接口
+- 【主机】LVM 云硬盘支持快照，LVM 云硬盘支持扩容
+- 【多云】支持对接 Oracle Cloud
+- 【多云】支持火山引擎 Cloud SSO 免密登录
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.3](../development/changelog/release-3_11/3-11-3)
+
 ## v3.11.2 (含v3.11.1)
 
 date: 2024-3-20
