--- a/i18n/en/code.json
+++ b/i18n/en/code.json
@@ -434,6 +434,24 @@
   "对应 Kubernetes calico 插件默认网卡选择规则": {
     "message": "Default NIC Selection Rules for the Kubernetes calico Plugin"
   },
+  "确保 git 已经安装": {
+     "message": "Ensure that Git is installed"
+  },
+  "克隆ocboot 的 master 分支. 注意：k3s的部署方式，目前只实现在 ocboot 的 master里": {
+     "message": "Clone the master branch of ocboot. Note: Currently, the deployment method of k3s is only implemented in the master branch of ocboot."
+    },
+  "安装 buildah": {
+    "message": "installation of buildah"
+  },
+  "默认部署 v3.11.x 版本的云管系统。如需部署其他版本，请自行修改 VERSION 文件到指定发行版。": {
+    "message": "The default version cloud management is v3.11.x. If you need to deploy a different version, please modify the VERSION file."
+  },
+  "获取本机 IP": {
+    "message": "Get the ip address of current server"
+  },
+  "如果网络情况复杂(多网卡、多ip)，此处也可手工指定 IP": {
+    "message": "In the event of complex network scenarios (multiple network cards, multiple IPs), you can also manually specify the IP address."
+  },
   "ocbootConfigHA.controlPlaneHostHint": {
     "message": "IP of the K8s control node, corresponding to the VIP on which keepalived listens"
   },
