feat: v3.10.15 and v3.10.13 release notes

--- a/docs/release-notes/v3_10_x.md
+++ b/docs/release-notes/v3_10_x.md
@@ -4,6 +4,70 @@ sidebar_position: -310
 
 # v3.10.x
 
+## v3.10.15 (含v3.10.14)
+
+date: 2024-5-23
+
+### 功能优化
+
+-【主机】裸金属详情页增加部分属性信息
+-【监控】优化告警策略，支持同时设置多监控指标
+-【主机】支持透传设备自动探测
+-【主机】LVM 块存储支持快照
+-【监控】简化 Telegraf 容器的挂载点
+-【主机】新建 VMware 支持同时填写备注信息
+-【存储】KVM 支持对接 LVM 存储
+
+### 问题修复
+
+- 【系统】修复多 IP 节点一键巡检失败问题（企业版）
+- 【主机】修复关闭回收站菜单未隐藏问题
+- 【监控】修复告警资源没有显示的问题
+- 【多云】修复阿里飞天 RDS 到期释放问题
+- 【主机】修复基于主机镜像创建虚拟机调整配置报错问题
+- 【系统】修复权限信息展示不完整问题
+- 【网络】修复 vpcagent 同步异常问题
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.10.15](../development/changelog/release-3_10/3-10-15)
+- [CHANGELOG v3.10.14](../development/changelog/release-3_10/3-10-14)
+
+## v3.10.13
+
+date: 2024-3-12
+
+### 功能优化
+
+- 【主机】支持 PVE 平台主机 VNC 连接
+- 【容器】支持租户视图新建 k8s 集群
+- 【主机】KVM 支持 OpenCloudOS/OpenKylin/AlmaLinux/UOSDesktop 操作系统
+- 【调度】优化对于不同主机类型的调度性能
+- 【主机】ISO 创建的虚机系统类型会跟随 ISO 镜像设置的系统类型
+- 【部署】非 CentOS 宿主机部署时也会注入大页和 vfio 相关内核参数
+
+### 问题修复
+
+-【多云】修复新建代理可能出现无响应问题
+-【主机】修复列表展示多个透传设备信息重复问题
+-【主机】修复只读模式云账号出现在新建主机云账号列表问题
+-【系统】修复列表展示条目过多偶发备注修改无响应问题
+-【容器】修复镜像仓库地址过滤不生效的问题
+-【物理机】修复批量导入报错的问题
+-【主机】修复部署时 elfheader 打开文件未释放的问题
+-【主机】修复部署时含有特殊符号导致部署失败的问题
+-【主机】修复 xfs 部署偶发 host-deployer panic 的问题
+-【主机】修复主机镜像热迁移出现找不到磁盘 backing file 的问题
+-【主机】修复 3.9 升级到 3.10 热插拔内存描述文件中缺少热插的内存 size 的问题
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.10.13](../development/changelog/release-3_10/3-10-13)
+
 ## v3.10.12 (含v3.10.11)
 
 date: 2024-1-29
