增加k3s add-node 的文档

--- a/docs/getting-started/_parts/_quickstart-buildah-k3s.mdx
+++ b/docs/getting-started/_parts/_quickstart-buildah-k3s.mdx
@@ -17,6 +17,12 @@ import BuildahK3S from '@site/src/components/BuildahK3S';
 
 <BuildahK3S productVersion={props.productVersion} />
 
+## 新增节点
+
+import K3sAddNode from '@site/src/components/K3sAddNode';
+
+<K3sAddNode />
+
 ## 支持的操作系统
 
 注：3.11、3.10等，表示发行版 Release/3.11、Release/3.10。其余同理。
