feat: v3.11.4 release note

--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,40 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.4
+
+date: 2024-06-06
+
+### 功能优化
+
+- 【费用】费用预测功能优化（企业版）
+- 【多云】默认打开火山引擎、金山云及 Oracle Cloud 平台开关
+- 【网络】腾讯云支持 WAF 策略
+- 【网络】Azure 应用程序服务展示更多属性信息
+- 【主机】支持自动探测物理机透传设备
+- 【主机】虚拟机导出磁盘和内存单位统一为 GB
+- 【监控】允许设置包含多个触发条件的报警策略
+- 【多云】支持 ZStack 共享存储
+
+### 问题修复
+
+- 【系统】修复多 IP 环境一键巡检失败问题（企业版）
+- 【监控】修复多条告警指标关系错误导致无法告警问题
+- 【主机】修复 SLVM 存储相关问题
+- 【主机】修复更新 hostname 偶发失败问题
+- 【主机】修复宿主机注册时注册存储失败的问题
+- 【主机】修复 IPv6 安全组开启后主动访问物理网关不通的问题
+
+### 新功能
+
+- 【主机】新增社区镜像，支持一键导入
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.4](../development/changelog/release-3_11/3-11-4)
+
 ## v3.11.3
 
 date: 2024-4-28
