--- a/docs/getting-started/_parts/_quickstart-ocboot-install-cloudpods.mdx
+++ b/docs/getting-started/_parts/_quickstart-ocboot-install-cloudpods.mdx
@@ -33,7 +33,7 @@ Password: admin@123
 
 ![登录页](../images/index.png)
 
-## 修改 api_server 接入端
+## 使用域名访问环境时，需要修改 api_server 接入端（可选）
 
 `api_server` 配置是整个平台的接入端地址，会影响前端 CloudShell、 虚拟机 VNC 或者 Web SSH 的连接。一般无法打开 CloudShell 或者通过前端 SSH 进入虚拟机，是因为没有正确设置 api_server 配置。
 
