fix: add product guide

--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -17,6 +17,10 @@ import TabItem from '@theme/TabItem';
     - [使用 docker compose 快速部署多云管理](./cmp/quickstart-docker-compose)
     - [使用 helm 在 Kubernetes 上部署多云管理](./cmp/quickstart-k8s-helm)
 
+## 如何选择？
+
+![产品选择](./images/prodguide.png)
+
 import IndexDocCardList from '@site/src/components/IndexDocCardList';
 
 <IndexDocCardList />
