--- a/docs/getting-started/_parts/_quickstart-ocboot-install-cloudpods.mdx
+++ b/docs/getting-started/_parts/_quickstart-ocboot-install-cloudpods.mdx
@@ -33,7 +33,7 @@ Password: admin@123
 
 ![登录页](../images/index.png)
 
-## 使用域名访问环境时，需要修改 api_server 接入端（可选）
+#### 使用域名访问环境时，需要修改 api_server 接入端（可选）
 
 `api_server` 配置是整个平台的接入端地址，会影响前端虚拟机 VNC 或者 Web SSH、CloudShell 的连接。一般无法通过 Web SSH 进入虚拟机或者打开 CloudShell，是因为没有正确设置 api_server 配置造成的。
 
