--- a/docs/getting-started/_parts/_quickstart-use-virt.mdx
+++ b/docs/getting-started/_parts/_quickstart-use-virt.mdx
@@ -3,11 +3,7 @@
 
 #### 1. 导入镜像
 
-浏览位于 [CentOS 7云主机镜像](https://cloud.centos.org/centos/7/images/) ，选择一个GenericCloud 镜像，拷贝镜像URL。
-
-在 `主机` 菜单，选择 `系统镜像`，选择 `上传`。输入镜像名称，选择 `输入镜像URL`，粘贴上述CentOS 7镜像URL，选择 `确定`。
-
-可以访问 https://docs.openstack.org/image-guide/obtain-images.html 获得更多的虚拟机镜像。
+在 `主机` 菜单，选择 `系统镜像`，选择 `社区镜像`，进入社区镜像列表，选择一个镜像，选择 `导入`。
 
 #### 2. 创建网络（VPC和IP子网）
 
@@ -19,5 +15,6 @@
 
 #### 3. 创建虚拟机
 
-在 `主机` 菜单，选择 `虚拟机`，选择 `新建`。在此界面输入主机名，选择镜像和IP子网，创建虚拟机。
+刚部署好的环境中，默认会把控制节点部署为第一台计算节点（宿主机）。如需使用该节点创建虚拟机，在 `主机` 菜单，选择 `宿主机`，选择右侧 `更多`，选择 `启用`。
 
+在 `主机` 菜单，选择 `虚拟机`，选择 `新建`。在此界面输入主机名，选择镜像和IP子网，创建虚拟机。
