--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,50 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.5
+
+date: 2024-07-04
+
+### 功能优化
+
+- 【虚拟机】默认清理镜像缓存
+- 【虚拟机】调整配置适配disk_type=swap的数据盘展示
+- 【网络】创建子网时默认隐藏 ipv6 设置
+- 【网络】虚拟机网卡带宽调整优化，上限到 100Gbps
+- 【宿主机】转换宿主机时候添加磁盘的挂载路径只能是 /opt/cloud/workspace 的子目录
+- 【多云】支持腾讯云新版natgateway API
+- 【远程控制】虚拟机vnc和ssh登录等远程操作，默认关闭水印
+- 【多云】新建定时任务，增加默认时间
+- 【工单】添加操作日志记录（企业版）
+
+### 问题修复
+
+- 【虚拟机】修复删除虚拟机快照没有删除的问题
+- 【虚拟机】修复虚拟机设置列表项时，资源标签键重复展示的问题
+- 【监控】修复网络监控数据单位显示问题
+- 【安装部署】修复首次安装可能出现无法打开 CloudShell 的问题
+- 【安装部署】修复基于 docker compose 部署打开 CloudShell 没有使用当前登录权限的问题
+- 【安装部署】opreator兼容支持mysql 8.0
+- 【安装部署】修复 kube-apiserver 偶发重启导致后续安装步骤失败的问题
+- 【监控】 修复新建告警策略，通知类型为角色或告警机器人时，角色或告警机器人选择框设置为必填
+- 【认证与安全】修复新建短信通知渠道时，连接测试未验证表单内容是否有效的问题，增加手机号的验证
+
+### 新功能
+
+- 【虚拟机】支持 vmware 迁移(v2v迁移)到 cloudpods 私有云
+- 【网络】eip 支持关联资源的查询
+- 【宿主机】自动清理镜像缓存，默认当镜像缓存超过12%存储空间时，自动清理缓存超过30天的无用镜像
+- 【物理机】创建裸金属时，添加系统盘匹配器（命令行支持）
+- 【物理机】支持设置各品牌型号的物理机的lan channels，root id等配置信息（命令行支持）
+- 【认证与安全】用户列表导出支持同时导出用户加入的项目和组信息
+- 【网络】waf详情支持展示域名信息、源站地址、回源方式等信息
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.5](../development/changelog/release-3_11/3-11-5)
+
 ## v3.11.4
 
 date: 2024-06-06
