fix: add telegram

--- a/docs/contact/index.mdx
+++ b/docs/contact/index.mdx
@@ -6,6 +6,8 @@ sidebar_position: 999
 
 - 企业技术服务：[订阅企业技术服务](https://www.yunion.cn/subscription/index.html)
 
+- 电报群: [cloudpods](https://t.me/cloudpods_org)
+
 - 微信：通过扫描下方二维码联系我们
 
 import WechatQRCode from '@site/static/img/docs/contact/contact_me_qr_20230321.png';
