feat: v3.11.6 release note

--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,53 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.6
+
+date: 2024-08-15
+
+### 功能优化
+
+- 【平台】前后端优化虚拟机和宿主机列表查询的速度
+- 【多云监控】避免产生大量操作日志
+- 【多云】优化腾讯云已下线可用区资源同步
+- 【网络】默认使用 ethtool 开启宿主机网卡的 gso 特性
+- 【物理机】添加物理机默认对 redfish api 兼容性进行校验
+- 【多云管理】云用户支持展示云订阅信息
+- 【平台】增加uos系统图标
+- 【虚拟机】cloudpods平台支持选择iso镜像创建虚拟机
+- 【物理机】新建物理机增加对管理口mac地址的校验
+
+### 问题修复
+
+- 【前端】添加vmware云账号的时候，可用区列表为空
+- 【虚拟机】手动方式部署网络配置时候，没有加169.254.169.254的路由，导致无法web ssh登录云主机
+- 【虚拟机】修复设置虚机磁盘缓存模式导致虚机启动失败的问题
+- 【物理机】修复安装裸金属会出现部署失败的问题
+- 【物理机】修复探测 ipmi 网卡出现 0.0.0.0 导致纳管失败的问题
+- 【物理机】修复删除物理机网卡的出现的错误
+- 【物理机】混用 megaraid 和 pcie 磁盘的时候出现装机失败的问题
+- 【网络】简化清理未使用的安全组
+- 【存储】修复 lvm 存储创建加密磁盘和快照失败的问题
+- 【网络】同步私有云 kvm 虚拟机安全组出现未知状态的问题
+- 【通知】避免没有设置手机号造成的 panic 错误
+- 【监控】修复多报警指标产生的重复消息记录
+- 【宿主机】避免产生过多的 qga ping 日志
+- 【多云】修复vmware使用iso创建虚拟机失败问题
+- 【计费】避免上月费用为负导致增长率为负（企业版）
+- 【安全组】公有云安全组规则入方向和出方向来源限制不允许为空
+- 【多云管理】修复云用户操作无法点击问题，去除对健康状态的检查
+
+### 新功能
+
+- 【监控】添加网络 pps，磁盘 inodes_usage 相关监控指标
+- 【网络】创建子网时支持设置 dhcp_relay 属性，方便物理机网络设置
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.6](../development/changelog/release-3_11/3-11-6)
+
 ## v3.11.5
 
 date: 2024-07-04
