--- a/i18n/en/docusaurus-plugin-content-docs/current/getting-started/_parts/_quickstart-ocboot-env.mdx
+++ b/i18n/en/docusaurus-plugin-content-docs/current/getting-started/_parts/_quickstart-ocboot-env.mdx
@@ -1,5 +1,5 @@
 - Operating System: Supported distributions vary depending on CPU architecture. The current situation of supported distributions is as follows:
-    - [CentOS 7.6~7.9 Minimal](http://isoredirect.centos.org/centos/7/isos): Supports x86_64 and arm64
+    - [CentOS 7.6~7.9 Minimal](https://centos.org/download/): Supports x86_64 and arm64
     - [Debian 10/11](https://www.debian.org/distrib/): Supports x86_64 and arm64
     - [Ubuntu 22.04](https://releases.ubuntu.com/jammy/): Supports only x86_64
     - [Kylin V10 SP2](https://www.kylinos.cn/scheme/server/1.html): Supports x86_64 and arm64
