relase note of v3.11.8

--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,82 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.8 (含v3.11.7)
+
+date: 2024-10-14
+
+本次3.11.8更新亮点为：
+
+- ocboot 默认使用 k3s 作为运行平台服务的底座，替换旧的 v1.15.12 的 k8s 版本。新的部署方式将使用 buildah 和容器镜像的方式部署，更加干净和轻量，不需要在宿主机上安装 ansible 等 python 环境。同时 ocboot 也会兼容旧的 k8s 部署的集群，添加节点和升级服务都不受影响。
+- 部署虚拟机时自动部署QGA（qemu-guest-agent），依赖QGA的功能（如开机时修改主机密码，更换主机IP等）将更加可靠，后续还将基于QGA完善和扩展更多功能。
+- 前端对资源列表进行了整体性能优化，响应速度更快，体验更丝滑。
+
+### 功能优化
+
+- 【前端】资源列表加载速度优化
+- 【前端】告警资源增加ip搜索
+- 【多云管理】纳管cloudpods云账号时，自动设置 endpoint_type  类型
+- 【k8s管理】集群和命名空间下拉列表支持搜索
+- 【监控】添加 inodes 使用率监控
+- 【部署】ocboot 部署工具支持 sudo 权限运行
+- 【部署】ocboot 部署控制节点不会重启服务器
+- 【工单】审批工单流程速度提升（企业版）
+- 【前端】外部数据单独为一级菜单（企业版）
+- 【前端】mfa 认证工具推荐使用宁盾令牌
+- 【存储】优化 lvm slvm 快照、镜像和备份相关功能
+- 【存储】lvm slvm 存储支持加密磁盘 （企业版）
+
+### 问题修复
+
+- 【前端】添加vmware云账号的时候，选择可用区使用加了usable=true的过滤器，导致可用区列表为空
+- 【host-deployer】手动方式部署网络配置时候，没有加169.254.169.254的路由，导致无法web ssh登录云主机
+- 【host-deployer】修复cmp部署模式下host-deployer服务认证失败的问题
+- 【host-deployer】修复 uefi 镜像引导方式探测不正确的问题
+- 【虚拟机】部署虚机时添加内存和CPU 热扩容自动 online 的 udev 规则，避免热扩容的CPU和内存没有自动启用
+- 【虚拟机】修复热迁移时镜像缓存被删导致无法热迁移的问题
+- 【虚拟机】调整并发部署虚机的数量，添加配置可配置并发度
+- 【虚拟机】修复并发创建虚机偶发端口冲突部署失败的问题
+- 【虚拟机】修复 rbd 虚机保存镜像失败的问题
+- 【虚拟机】允许创建uefi引导虚机当无法探测镜像的引导方式
+- 【存储】修复自动清理镜像缓存时误删正则使用的镜像缓存的问题
+- 【裸金属】偶尔会出现部署失败的情况
+- 【物理机】修复探测 ipmi 时 bmc 网卡出现 0.0.0.0 ip 导致失败的问题
+- 【物理机】修复前端批量纳管物理机报 validate-ipmi 的问题
+- 【前端】菜单权限未检查问题修复
+- 【cloudshell】修复执行交互模式的进程会出现没有退出导致进程泄露的情况
+- 【lbagent】lbagent启动应该启用path mtu probe
+- 【监控】修复 OR 查询条件报错的问题
+- 【监控】修复拉取aws,gcp cpu监控数据问题
+- 【命令行工具】修复 climc host-ssh 登录宿主机报错的问题
+- 【多云认证】修复多云权限同步异常问题
+- 【部署】修复通过 helm chart 部署 ingress 无法访问的问题
+- 【部署】修复通过 helm chart 部署 VictoriaMetrics CSI 定义没有生效的问题
+- 【部署】修复 ocboot 升级时 imageRepository 会刷新的问题
+- 【计费】避免上月费用为负导致增长率为负（企业版）
+- 【字典】字典默认值取用原始值（企业版）
+
+### 新功能
+
+- 【监控】监控查询和监控面板支持结果聚合函数
+- 【监控】容器主机增加监控指标
+- 【多云管理】云账号支持克隆
+- 【监控面板】使用率磁贴支持跳转至当前资源
+- 【虚拟机】支持在创建虚拟机时自动部署QGA（qemu-guest-agent）
+- 【虚拟机】调度支持分配 CPU 绑核和 NUMA 内存，支持在虚机重启时重新分配
+- 【前端】虚拟机网卡支持设置辅助IP
+- 【计费】账单报表隐藏应付金额为0的账单条目（企业版）
+- 【前端】监控大屏支持设置自定义地址（企业版）
+- 【计费】支持批量重跑账单（企业版）
+- 【前端】登录页面支持样式设置（企业版）
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.8](../development/changelog/release-3_11/3-11-8)
+- [CHANGELOG v3.11.7](../development/changelog/release-3_11/3-11-7)
+
+
 ## v3.11.6
 
 date: 2024-08-15
