fix: ocboot upgrading content

--- a/docs/operations/upgrading/ocboot-upgrade.mdx
+++ b/docs/operations/upgrading/ocboot-upgrade.mdx
@@ -56,7 +56,7 @@ import OcbootReleaseDownload from '../../getting-started/_parts/_quickstart-ocbo
 
 如果没有设置免密码登录，请使用 `ssh-copy-id -i ~/.ssh/id_rsa.pub root@PRIMARY_MASTER_HOST` 命令把公钥下发到自己环境对应的节点。
 
-升级的版本号可以到 [CHANGELOG 3.10 页面](../../development/changelog/release-3_10/) 查询。
+可升级的版本号可以到 [发布日志 3.11 页面](../../release-notes/v3_11_x) 查询。
 
 ### 执行升级命令
 
