feat: release v3.11.9 and v3.10.16

--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,71 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.9
+
+date: 2024-12-24
+
+本次v3.11.9更新亮点为：
+
+- 对监控服务进行了功能优化，包括图表面板交互，添加了更多的宿主机指标，以及对结果聚合函数的排序等功能。
+- 对调度器并发创建虚拟机，短时间内重复计算资源的问题进行了修复，提升并发创建时调度的准确和可用性。
+- 创建虚拟机时，支持跨盘LVM逻辑卷的挂载识别和初始化。
+
+另外，之前版本部署集群时，会自动将dns_domain设置为一个我们认为不会使用的域名 cloud.onecloud.io 作为示例。但该域名自2024年10月31日开始接受解析，导致部分使用8.8.8.8域名解析服务且未修改dns_domain配置的用户开始遇到域名解析异常。因此自3.11.9开始，不再默认设置dns_domain。请遇到类似问题时关注此配置。
+
+### 功能优化
+
+- 【虚拟机】虚机保存镜像时不再清理 spool 目录
+- 【虚拟机】虚机创建部署时支持 lvm 跨第一个云磁盘分区的情况
+- 【监控】支持输出监控数据到 kafka
+- 【监控】支持更多的监控指标，包括 system, processes，bond 等
+- 【监控】添加 bond 网卡设备的告警策略
+- 【监控】监控面板功能改进，添加 min 和 max 的聚合函数，支持按聚合函数的结果排序
+- 【监控】优化监控曲线展示样式及图表交互，支持修改控制面板名称，允许调整面板顺序，自定义时间更精确
+- 【物理机】支持更新 root-disk-matcher 参数
+- 【物理机】增加 redfish api 客户端超时，避免因为访问 api 时间过长导致纳管物理机失败
+- 【磁盘】镜像自动转换效率优化，允许并发
+- 【宿主机】优化共享存储资源上报，挂载多台宿主机时会选择一台 master host 进行资源上报
+- 【宿主机】资源统计cpu、内存、存储区分虚拟和物理两个维度展示
+- 【云管】同步腾讯云余额包含信用额度
+- 【云管】更新azure云用户创建api
+- 【云管】对回收站虚拟机清除时,若存在运行中的虚拟机增加二次确认
+- 【权限】扩展权限，单个功能可能涉及多个权限，扩展至每个权限都能影响功能使用
+- 【操作日志】支持查看调度失败的操作日志
+- 【站内信】列表展示优化，过多内容放在弹框中展示
+- 【计费】优化从GCP BIQGUERY拉取账单的逻辑，尽量降低扫描全表频率，降低查询产生的高额费用（企业版）
+- 【计费】导出的计费表格支持欧元币种（企业版）
+- 【权限】购物车功能改进，支持权限控制，工单,资源名称修改为描述更具体信息的名称（企业版）
+- 【监控大屏】资源概览展示优化，增加更多资源指标（企业版）
+
+### 问题修复
+
+
+- 【虚拟机】取消配置 cloud.onecloud.io 作为默认 dns domain
+- 【调度器】避免分配到同一宿主机的调度策略导致的虚拟机分配不均匀问题
+- 【虚拟机】挂载和卸载磁盘后没有同步状态的问题
+- 【虚拟机】修复天翼云实例计费类型同步错误
+- 【虚拟机】虚拟机实例azure套餐和镜像选择添加适配规则
+- 【虚拟机】修复 libvirt 导入解析 xml 失败的问题，同时会解析  live xml
+- 【虚拟机】修复通过云管cloudpods虚拟机迁移问题
+- 【存储】修复源磁盘已经删除导致快照删除失败的问题
+- 【存储】修复块存储更新配置不生效问题
+- 【调度】修复资源统计时重复计算pending usage中资源的问题
+- 【监控】修复报警恢复时包含其他资源的问题
+- 【监控】修复多指标报警邮件内容展示不清晰的问题
+- 【监控】克隆监控面板后的图表没有复制的问题
+- 【监控】修复新增云账号不拉取监控问题
+- 【物理机】修复部署时没有设置默认网关的问题
+- 【云管】扩展RDS maintain_time字段长度
+- 【计费】分摊选择项目支持远程过滤（企业版）
+- 【计费】多维度分析第二维度按标签聚合,表格头展示应该展示标签key（企业版）
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.9](../development/changelog/release-3_11/3-11-9)
+
 ## v3.11.8 (含v3.11.7)
 
 date: 2024-10-14
