--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,88 @@ sidebar_position: -311
 
 # v3.11.x
 
+date: 2025-04-04
+
+本次v3.11.10更新亮点为：
+
+- 对服务性能进行了系统性优化，包括虚拟机在资源较多情况下的调度时间，监控服务的查询时间，以及前端页面的渲染时间。
+- 监控面板和监控查询体验有较明显的改进，支持折叠监控面板，导出和排序监控数据，优化大量监控指标时的渲染速度等。
+- 安全全面升级，所有服务默认禁用TLS v1.0和1.1，禁用3DES，SHA1等存在缺陷的加密算法，关闭pprofiling接口，前端去除webpack源码映射信息等。
+- 内置虚拟化继续完善使用体验，如自动缓存磁盘镜像到 ceph 存储，提升ceph磁盘使用体验，本地磁盘克隆速率提升10倍以上等。
+
+### 功能改进
+
+- 【前端】页面标题自动展示当前页面信息
+- 【前端】列表加载优化，大页数据支持分批次渲染，切换数据不清空当前数据直接切换
+- 【调度】优化大规模宿主机节点时的虚拟机调度时间
+- 【调度】尽早发现子网 ip 不足引起的调度失败
+- 【虚拟机】host-image 服务优化，使用 nbd 协议远程挂载本地磁盘，本地磁盘克隆速率提升10倍以上
+- 【虚拟机】kvm虚拟机支持 sata ahci 磁盘类型
+- 【虚拟机】虚机创建时磁盘使用 xfs 默认设置 ftype=1以支持docker的overlayfs（issue#22211）
+- 【宿主机】优化宿主机上报透传设备的时间，避免透传设备数量太多而导致 host 服务启动超时问题
+- 【宿主机】扩大 host 表 sys_info 字段使用 longtext，避免在某些机型hostagent启动失败
+- 【宿主机】宿主机列表展示 CPU 、内存和磁盘的分配率和使用率
+- 【宿主机】为设置宿主机和存储超售比提供独立API，便于控制权限
+- 【物理机】调整 redfish 客户端连接超时到 60s，避免纳管物理机出现超时问题
+- 【网络】创建VPC时允许设置IPv6网络前缀
+- 【网络】创建虚拟机支持手动设置IPV6地址，更换虚拟机IPv6地址时也允许手动指定
+- 【DNS】允许不同账号 dns zone 重名
+- 【监控】优化查询监控指标项的时间
+- 【监控】支持对结果聚合函数的指标进行排序
+- 【监控】telegraf 组件添加更多的监控指标
+- 【监控】报警数量过多时不再批量发送
+- 【监控】优化查询报警历史的时间
+- 【监控】支持克隆监控告警策略
+- 【监控】添加了宿主机网卡 bond 设备、system.load1_pcore 的默认报警
+- 【监控】添加网卡收发包数和收发字节数监控指标查询
+- 【监控】展示优化，支持监控面板修改名称、折叠面板、克隆面板，调整面板顺序、展示曲线数据、支持数据分页、支持IN查询等
+- 【监控】添加zstack内存监控，修正novnc访问地址(开源用户zero贡献)
+- 【认证】优化通过密码认证的时间
+- 【部署】平台部署 etcd 默认开启 TLS 认证
+- 【云管】s3支持指定签名算法版本为v2或v4，备份存储也支持设置s3签名算法版本
+- 【云管】支持阿里云虚拟机包年包月转按量计费
+- 【云管】支持vmware虚拟机自动根据模板设置UEFI启动项
+- 【云管】支持操作纳管的Cloudpods虚拟机迁移
+- 【云管】允许阿里云开机调整配置添加磁盘
+- 【云管】支持公有云用户启用禁用控制台登录(企业版)
+- 【工单】工单支持设置开、关机和删除相关参数（企业版）
+- 【工单】主机调整配置工单增加更详细的配置信息（企业版）
+- 【堡垒机】支持加入，更新和删除Jumpserver主机信息，和云管主机全生命周期保持同步(企业版)
+- 【堡垒机】支持将主机添加进入组织架构（企业版）
+- 【监控】监控大屏增加资源信息展示，cpu、内存、存储使用率和分配率(企业版)
+- 【前端】列表导出优化，支持自定义列顺序（企业版）
+- 【巡检】自动巡检支持chrony作为时间同步服务（企业版）
+
+### 问题修复
+
+- 【虚拟机】修复虚拟机挂载和卸载磁盘时同步状态导致状态不一致的问题
+- 【虚拟机】修复 sriov 网卡访问当前宿主机同网段 virtio 网卡不通的问题
+- 【虚拟机】修复老版本虚机未设置默认内存设备导致 CPU 内存热插拔失败的问题
+- 【虚拟机】修复部署虚机在某些 CPU 下无法启动的问题
+- 【虚拟机】修复 lvm 磁盘宿主机重启后被其他机器占用的问题
+- 【虚拟机】修复 lvm 磁盘虚机部署时路径不对导致部署失败的问题
+- 【虚拟机】修复虚拟多个磁盘同时执行自动快照策略冲突的问题
+- 【虚拟机】修复虚机删除多个快照时进度上报不正确的问题
+- 【虚拟机】将多个磁盘镜像组合成主机镜像后，无法删除磁盘镜像
+- 【监控】修复根据部分标签过滤和聚合不生效的问题
+- 【监控】修复克隆监控面板后，监控查询语句不是完全拷贝的问题
+- 【部署】避免高可用部署 keepalived 时 router id 可能被设置成 0 的问题
+- 【部署】修正etcd偶发生成大量etcdctl僵尸进程问题
+- 【容器】修复同步系统 K3s 集群可能出现认证失败的问题
+- 【webconsole】修复webconsole服务ssh客户端CPU占用率高问题
+- 【后端】修复时区未正确设置导致 cronjob 未按计划执行的问题
+
+### 新功能
+
+- 【虚拟机】虚机磁盘支持关机自动重置的功能
+- 【虚拟机】镜像服务支持自动缓存系统镜像到 ceph 存储
+- 【认证】支持强制全局启用MFA开关
+- 【云管】支持同步金山云RDS资源
+- 【云管】支持批量创建公有云用户(企业版)
+- 【计费】支持Azure RI资源拉取(企业版)
+- 【计费】支持火山云账单(企业版)
+- 【前端】登录页面支持自定义设置小屏/全屏样式（企业版）
+
 ## v3.11.9
 
 date: 2024-12-24
