--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,8 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.10
+
 date: 2025-04-04
 
 本次v3.11.10更新亮点为：
@@ -85,6 +87,12 @@ date: 2025-04-04
 - 【计费】支持Azure RI资源拉取(企业版)
 - 【计费】支持火山云账单(企业版)
 - 【前端】登录页面支持自定义设置小屏/全屏样式（企业版）
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.10](../development/changelog/release-3_11/3-11-10)
 
 ## v3.11.9
 
