feat: release note of v3.11.11

--- a/docs/release-notes/v3_11_x.md
+++ b/docs/release-notes/v3_11_x.md
@@ -4,6 +4,102 @@ sidebar_position: -311
 
 # v3.11.x
 
+## v3.11.11
+
+date: 2025-07-20
+
+本次v3.11.11更新亮点为：
+
+- 前端资源列表性能优化，大页数据分批次渲染，减少页面等待时间
+- 改进lockman锁机制，提高高并发场景锁的稳定性
+- 运行中内置虚拟化虚拟机添加网卡或变更IP地址时自动通过QGA配置网卡，实时生效
+- 裸金属支持自动加入VLAN子网，实现基于VLAN的物理机网络隔离
+- 赋予组织架构树状权限后用户查询速度优化，加速10倍以上（企业版）
+
+### 功能改进
+
+- 【前端】列表优化，大页数据分批次渲染，减少页面等待时间
+- 【前端】浏览器页面标题展示当前菜单名称，浏览器打开多个Tab页时方便区分
+- 【前端】控制面板资源跳转按钮增加权限校验
+- 【平台】改进lockman锁机制，提高高并发场景锁的稳定性
+- 【监控】优化多条告警数据的显示格式
+- 【监控】监控查询支持 in 和 not in 过滤，允许批量查询多个资源的监控数据
+- 【监控】支持克隆监控面板
+- 【云账号】云账号同步支持镜像类型
+- 【用户】系统用户删除时增加二次确认，提升安全性
+- 【主机】创建虚拟机，磁盘和网卡部分不常用配置收到“高级”菜单中，需要使用时可展开使用
+- 【主机】WebRDP增加密码校验
+- 【主机】详情增加 手动/自动续费 展示
+- 【主机】运行中内置虚拟化虚拟机添加网卡或变更IP地址时自动通过QGA配置网卡，实时生效
+- 【主机】支持腾讯云极速型和通用型SSD云硬盘
+- 【主机】虚拟机支持TencentOS操作系统
+- 【主机】支持公有云虚拟机调整配置时，新增磁盘使用虚拟机标签
+- 【主机】支持阿里云开机新增磁盘
+- 【主机】补充AWS磁盘规格，磁盘容量增加最大/最小值限制
+- 【主机】支持同步金山云RDS资源
+- 【消息通知】支持钉钉机器人加签
+- 【存储】块存储列表资源增加使用率展示
+- 【MongoDB】展示域名地址
+- 【部署】新部署集群 onecloud namespace etcd 默认开启 tls
+- 【部署】支持Ubuntu 20.04 x86_64和openEuler 24.03 LTS SP1 x86_64
+- 【认证】赋予组织架构树状权限后用户查询速度优化，加速10倍以上（企业版）
+- 【堡垒机】堡垒机-虚拟机增加信息展示和删除操作（企业版）
+- 【堡垒机】虚拟机支持加入堡垒机、从堡垒机移除操作（企业版）
+- 【云用户】云用户支持“启用/禁用控制台登录”（企业版）
+- 【报表】报表类型增加类别区分（企业版）
+- 【工单】主机工单增加信息展示；主机调整配置工单表格支持调整列宽（企业版）
+- 【计费】费用-项目列表支持修改资源标签（企业版）
+- 【计费】优化GCP费用拉取时，避免全表查询费用数据（企业版）
+- 【计费】账单汇总增加云订阅层级（企业版）
+
+### 问题修复
+
+- 【前端】修复部分详情页打开内容区域太小问题
+- 【平台】mysql数据库utf8mb4字段不支持存储emoj字符
+- 【认证】优化系统服务密码更新过多导致认证超时的问题
+- 【认证】修复修改权限时，“其他”权限回填错误问题
+- 【认证】修复新建免密登录用户时，用户未正常获取问题
+- 【调度】修复同时使用反亲和组和调度标签导致的虚拟机分配不均匀问题
+- 【文档】修复部分文档链接指向错误
+- 【主机】优化zstack监控数据拉取，修正novnc访问路径不对(by zero)
+- 【主机】修复PVE虚拟机IP同步不到问题
+- 【主机】修复aws重装系统超时失败问题
+- 【主机】修复谷歌云弹性公网IP同步异常问题
+- 【主机】关机不收费操作只在关机状态下验证
+- 【主机】修复vmware重装系统后磁盘类别识别错误问题
+- 【主机】修复aws虚拟机创建时磁盘DeviceName参数异常问题
+- 【主机】修复删除公有云机器时未能正常删除后挂载磁盘
+- 【主机】windows && GPU-VGA 要求镜像支持 UEFI
+- 【主机】修复强制关机时传参错误
+- 【主机】修复 ceph 虚拟机创建时部署失败的问题
+- 【主机】修复设置 qemu extra params 失败的问题
+- 【主机】修复 esxi 转 kvm lvm 盘虚机时失败的问题
+- 【主机】修复 userdata 部署时未解码的问题
+- 【主机】修复宿主机开启大页并同时设置 mem_cmt_bound 时计算内存使用率不准确的问题
+- 【部署】将deb源迁移到对象存储后，ubuntu出现更新失败
+- 【计费】多维度分析图表，横轴字段过多后，标签倾斜展示仍然有可能展示重叠，自适应隐藏部分标签（企业版）
+- 【计费】修复多维度分析页面，同时请求报告和默认多维度分析模板，造成数据错乱问题；修复多维度分析针对空数据的报错问题（企业版）
+- 【工单】修复主机批量调整配置，工单展示磁盘信息错误问题（企业版）
+- 【计费】账单资源增加ui策略限制（企业版）
+- 【计费】修复费用-云账号选中导出时的过滤参数（企业版）
+- 【授权】修复授权完成后，功能选择页面未默认选中已授权的功能问题（企业版）
+- 【授权】修复公有云调整配置后服务器识别码会发生变化（企业版）
+- 【授权】修复更改功能选择后会重置字典设置问题（企业版）
+
+### 新功能
+
+- 【主机】支持公有云资源转换计费模式，已支持阿里云的虚拟机和磁盘、腾讯云虚拟机包年包月与按量计费互转
+- 【主机】本地虚拟化磁盘支持“设置关机自动重置”的特性
+- 【主机】裸金属支持自动加入VLAN子网，实现基于VLAN的物理机网络隔离
+- 【webconsole】增加页面来源检查，禁止通过连接直接打开，提升网站安全性
+- 【webconsole】支持设置referer白名单，允许referer白名单内页面直接打开webconsole的控制台
+
+### CHANGELOG
+
+具体变更请参考: 
+
+- [CHANGELOG v3.11.11](../development/changelog/release-3_11/3-11-11)
+
 ## v3.11.10
 
 date: 2025-04-04
