fix: 钉钉加签消息通知

--- a/docs/guides/misc/notify/bot.mdx
+++ b/docs/guides/misc/notify/bot.mdx
@@ -30,6 +30,7 @@ sidebar_position: 5
 2. 钉钉群右上角群设置-智能群助手中添加自定义机器人。
 3. 设置机器人名称，添加到对应群组以及在安全设置中勾选IP地址(段)，将云平台的外网访问IP添加到IP地址段中。
 4. 添加成功后获取机器人Webhook地址。
+5. 若使用加签方式，假设签名是 SECac9a8260ab0ad590a7d40fa80d97eaab14e34c958025de40c38c4e2d3313b29b, 需要在webhook地址后面加上&sign=SECac9a8260ab0ad590a7d40fa80d97eaab14e34c958025de40c38c4e2d3313b29b, 例如: https://oapi.dingtalk.com/robot/send?access_token=ae8ec5b57bae00b2db0efdbdd1cccc9016c0c58ee15520e06f8b06a43589f60d&sign=SECac9a8260ab0ad590a7d40fa80d97eaab14e34c958025de40c38c4e2d3313b29b
 
 ### 飞书机器人
 
